Fixes part of footer spacing

--- a/src/components/Footer/Footer.module.sass
+++ b/src/components/Footer/Footer.module.sass
@@ -16,6 +16,9 @@
   position: absolute
   left: 0
   bottom: 0
+  display: flex
+  flex-direction: row
+  align-items: center
 
 .Footer__container
   margin-right: auto
@@ -34,7 +37,7 @@
   letter-spacing: 0.25px
   text-transform: uppercase
 
-  @media ($mobileBreak)
+  @media($mobileBreak)
     display: none
 
 .Footer__links__link
@@ -43,6 +46,9 @@
   font-size: 18px
   letter-spacing: 0.06em
   text-decoration: none
+
+  @media(max-width: 1250px)
+    font-size: 12px
 
   @media ($mobileBreak)
     display: none
@@ -57,11 +63,13 @@
   a
     margin-right: 12px
     font-family: $primaryFont
-    line-height: 44px
     letter-spacing: 0.3px
     text-transform: uppercase
     text-decoration: none
     color: $greyFontColor
+
+  @media(max-width: 970px)
+    font-size: 10px
 
   @media ($mobileBreak)
     margin-right: auto
@@ -69,3 +77,7 @@
     flex-direction: row-reverse
     width: 100%
     text-transform: lowercase
+    font-size: 10px
+
+.Footer__poweredBy__logo
+  min-width: 100px
